# squashmerge

./: FORMAT  Makefile.am  configure.ac
src/: compressor.c  compressor.h  squashmerge.c  util.c  util.h
tests/: 01-sqfs-lz4.in  01-sqfs-lz4.out  01-sqfs-lz4.sqdelta  01-sqfs-lz4hc.in  01-sqfs-lz4hc.out  01-sqfs-lz4hc.sqdelta  01-sqfs-lzo1.in  01-sqfs-lzo1.out  01-sqfs-lzo1.sqdelta  01-sqfs-lzo9.in  01-sqfs-lzo9.out  01-sqfs-lzo9.sqdelta  Makefile.am  perform-test.sh
tests/generators/: create-sqfs-tests.bash
